--- a/package.json
+++ b/package.json
@@ -1,42 +1,153 @@
 {
-  "name": "wusong-cms",
+  "private": true,
+  "name": "frontend-mobile",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "typecheck": "tsc"
+    "start-local": "cross-env BUILD_ENV=local next",
+    "start-dev": "cross-env BUILD_ENV=dev next start",
+    "start-pro": "cross-env BUILD_ENV=prod next start",
+    "export": "next build && next export",
+    "build-dev": "cross-env BUILD_ENV=dev next build",
+    "build-pro": "cross-env BUILD_ENV=prod next build",
+    "typecheck": "tsc",
+    "lint": "eslint --fix"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
+    "antd": "^4.14.0",
     "antd-mobile": "^2.3.4",
-    "babel-plugin-import": "^1.13.3",
+    "axios": "^0.21.1",
     "classnames": "2.2.6",
     "cross-env": "^7.0.3",
-    "less": "^4.0.0",
+    "less": "^4.1.1",
     "less-vars-to-js": "^1.3.0",
-    "next": "latest",
+    "next": "^10.0.9",
+    "next-compose-plugins": "^2.2.1",
+    "node": "^15.10.0",
+    "normalize.css": "^8.0.1",
     "null-loader": "^4.0.1",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-icons": "^4.1.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-redux": "^7.2.2",
-    "redux-devtools-extension": "^2.13.8",
+    "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.2.1",
-    "typescript": "^4.0.3"
+    "typescript": "^4.2.3",
+    "webpack": "^4.44.0",
+    "webpack-cli": "^4.5.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-decorators": "^7.12.12",
-    "@types/classnames": "^2.2.10",
-    "@types/jest": "^25.2.2",
-    "@types/node": "^14.0.1",
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.8",
+    "@babel/core": "^7.13.10",
+    "@babel/plugin-proposal-decorators": "^7.13.5",
+    "@types/classnames": "^2.2.11",
+    "@types/jest": "^26.0.21",
+    "@types/node": "^14.14.35",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
+    "@types/react-redux": "^7.1.16",
     "@types/redux": "^3.6.0",
+    "@types/styled-components": "^5.1.9",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
+    "babel-plugin-import": "^1.13.3",
     "babel-plugin-styled-components": "^1.12.0",
+    "babel-plugin-styled-components-px2rem": "^1.5.5",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "postcss-preset-env": "^6.7.0"
+    "eslint": "^7.22.0",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^5.2.0",
+    "lint-staged": "^10.5.4",
+    "postcss": "^8.2.8",
+    "postcss-preset-env": "^6.7.0",
+    "prettier": "^2.2.1"
   },
-  "license": "MIT"
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "es6": true,
+      "node": true
+    },
+    "settings": {
+      "react": {
+        "version": "detect"
+      }
+    },
+    "parser": "@typescript-eslint/parser",
+    "plugins": [
+      "@typescript-eslint",
+      "react-hooks"
+    ],
+    "extends": [
+      "eslint:recommended",
+      "plugin:react/recommended",
+      "plugin:@typescript-eslint/recommended"
+    ],
+    "globals": {
+      "document": true,
+      "navigator": true,
+      "window": true,
+      "node": true
+    },
+    "rules": {
+      "no-console": "off",
+      "arrow-spacing": "error",
+      "no-extra-semi": "error",
+      "object-curly-spacing": [
+        "warn",
+        "always"
+      ],
+      "@typescript-eslint/no-empty-function": "off",
+      "@typescript-eslint/no-inferrable-types": "off",
+      "@typescript-eslint/no-explicit-any": "off",
+      "react-hooks/rules-of-hooks": "error",
+      "react-hooks/exhaustive-deps": "warn",
+      "react/jsx-uses-react": "off",
+      "react/react-in-jsx-scope": "off",
+      "react/prop-types": 0
+    },
+    "overrides": [
+      {
+        "files": [
+          "**/*.ts?(x)"
+        ],
+        "rules": {
+          "no-unused-expressions": "off",
+          "@typescript-eslint/explicit-function-return-type": [
+            "warn",
+            {
+              "allowExpressions": true
+            }
+          ]
+        }
+      }
+    ],
+    "ignorePatterns": [
+      "next.config.js"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{less,json}": [
+      "prettier --write"
+    ],
+    "*.{js,jsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.ts?(x)": [
+      "eslint --fix",
+      "prettier --parser=typescript --write"
+    ]
+  },
+  "license": "private"
 }
